Agregar y editar candidato funcionando

--- a/src/app/features/eleccion/eleccion-list/eleccion-list.component.html
+++ b/src/app/features/eleccion/eleccion-list/eleccion-list.component.html
@@ -102,7 +102,7 @@
           </div>
         </div>
 
-        <!-- Criterios -->
+        <!-- Criterios
         <div class="border-t border-[#f0f1f8] dark:border-[#443a52] pt-4 mt-4">
           <h4 class="text-lg font-semibold mb-2 text-[#2d2c63] dark:text-[#A78BFA]">Criterios de Evaluación</h4>
           <div formArrayName="criterios">
@@ -118,7 +118,7 @@
           <button type="button" (click)="addCriterio()" class="mt-2 py-2 px-3 inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-dashed border-gray-400 text-gray-800 hover:bg-gray-100 dark:text-white dark:border-neutral-600 dark:hover:bg-neutral-700">
             Añadir Criterio
           </button>
-        </div>
+        </div> -->
 
       </div>
 
