--- a/src/app/features/eleccion/eleccion-config/eleccion-config.component.html
+++ b/src/app/features/eleccion/eleccion-config/eleccion-config.component.html
@@ -8,25 +8,40 @@
 <div *ngIf="eleccion()" class="p-4">
   <h2 class="text-2xl font-bold text-[#2d2c63] dark:text-[#A78BFA] mb-4">{{ eleccion()?.titulo }}</h2>
   <div *ngIf="eleccion()?.candidatos && eleccion()?.candidatos!.length > 0; else noCandidatos" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
-    <div *ngFor="let candidato of eleccion()?.candidatos; let i = index" class="relative group duration-500 cursor-pointer group overflow-hidden text-gray-50 h-72 w-56  rounded-2xl hover:duration-700 ">
-      <div class="w-56 h-72 bg-cover bg-center" [style.backgroundImage]="'url(' + (candidato.imagenes[currentImageIndexes[i]]?.secure_url || 'https://placehold.co/600x400/6b7280/ffffff?text=' + candidato.nombre) + ')'">
-        <div class="absolute inset-0 bg-black bg-opacity-20 flex justify-between items-center">
-          <button (click)="prevImage(i)" class="p-2 text-white">
+    <div *ngFor="let candidato of eleccion()?.candidatos; let i = index" class="relative bg-white dark:bg-[#2A2433] rounded-2xl shadow-lg overflow-hidden transform hover:scale-105 transition-transform duration-300">
+      <!-- <div class="absolute top-2 right-2 z-10">
+        <button class="p-2 rounded-full bg-black/20 bg-opacity-25 text-white config-button cursor-pointer">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 5v.01M12 12v.01M12 19v.01M12 6a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z" />
+          </svg>
+        </button>
+      </div> -->
+      <div class="relative w-full h-48">
+        <img [src]="candidato.imagenes[currentImageIndexes[i]]?.secure_url || 'https://placehold.co/600x400/6b7280/ffffff?text=' + candidato.nombre" alt="Foto de {{ candidato.nombre }}" class="w-full h-48 object-cover carousel-image" [class.opacity-0]="isImageLoading[i]">
+        <div class="absolute inset-0 flex justify-between items-center">
+          <button (click)="prevImage(i)" class="p-2 text-white bg-black bg-opacity-25 rounded-full carousel-button cursor-pointer">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
             </svg>
           </button>
-          <button (click)="nextImage(i)" class="p-2 text-white">
+          <button (click)="nextImage(i)" class="p-2 text-white bg-black bg-opacity-25 rounded-full carousel-button cursor-pointer">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
             </svg>
           </button>
         </div>
       </div>
-      <div class="absolute bg-gray-50 -bottom-24 w-56 p-3 flex flex-col gap-1 group-hover:-bottom-0 group-hover:duration-600 duration-500">
-        <span class="text-lime-400 font-bold text-xs">{{ candidato.edad }} años</span>
-        <span class="text-gray-800 font-bold text-3xl">{{ candidato.nombre }} {{ candidato.apellido }}</span>
-        <p class="text-neutral-800">{{ candidato.propuesta }}</p>
+      <div class="p-4 relative">
+        <div class="absolute bottom-2 right-2">
+          <button (click)="openModal(candidato)" class="p-2 rounded-full bg-black bg-opacity-25 text-white">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.5L14.732 3.732z" />
+            </svg>
+          </button>
+        </div>
+        <h3 class="text-lg font-bold text-[#2d2c63] dark:text-[#A78BFA]">{{ candidato.nombre }} {{ candidato.apellido }}</h3>
+        <p class="text-sm text-gray-600 dark:text-gray-400">{{ candidato.edad }} años</p>
+        <p class="mt-2 text-sm text-gray-700 dark:text-gray-300">{{ candidato.propuesta }}</p>
       </div>
     </div>
   </div>
@@ -45,7 +60,7 @@
     <form [formGroup]="candidatoForm" (ngSubmit)="onSubmit()" class="p-8">
       <div class="mb-8 text-center">
         <h2 class="text-2xl font-bold text-[#2d2c63] dark:text-[#A78BFA]">
-          Agregar Nuevo Candidato
+          {{ isEditMode ? 'Editar Candidato' : 'Agregar Nuevo Candidato' }}
         </h2>
         <p class="text-sm text-[#9291aa] mt-1">
           Completa la información del candidato.
