--- a/src/app/features/eleccion/eleccion-config/eleccion-config.component.html
+++ b/src/app/features/eleccion/eleccion-config/eleccion-config.component.html
@@ -32,13 +32,18 @@
         </div>
       </div>
       <div class="p-4 relative">
-        <div class="absolute bottom-2 right-2">
-          <button (click)="openModal(candidato)" class="p-2 rounded-full bg-black bg-opacity-25 text-white">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.5L14.732 3.732z" />
-            </svg>
-          </button>
-        </div>
+      <div class="absolute top-2 right-2 z-10">
+        <button (click)="openModal(candidato)" class="p-2 rounded-full bg-black bg-opacity-25 text-white config-button">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.5L14.732 3.732z" />
+          </svg>
+        </button>
+        <button (click)="eliminarCandidato(candidato.id!)" class="p-2 rounded-full bg-red-500 bg-opacity-25 text-white ml-2 config-button">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
+          </svg>
+        </button>
+      </div>
         <h3 class="text-lg font-bold text-[#2d2c63] dark:text-[#A78BFA]">{{ candidato.nombre }} {{ candidato.apellido }}</h3>
         <p class="text-sm text-gray-600 dark:text-gray-400">{{ candidato.edad }} años</p>
         <p class="mt-2 text-sm text-gray-700 dark:text-gray-300">{{ candidato.propuesta }}</p>
