--- a/src/app/features/admin/gestion-usuarios/gestion-usuarios.component.html
+++ b/src/app/features/admin/gestion-usuarios/gestion-usuarios.component.html
@@ -126,7 +126,7 @@
                 class="inline-flex items-center gap-1.5 py-1 px-3 rounded-full text-xs font-medium bg-[#e7f0fa] text-[#3498db] dark:bg-blue-900/50 dark:text-blue-400 shadow-sm">
                 {{usuario.rol}}
               </span>
-              } @else if (usuario.rol === 'Docente') {
+              } @else if (usuario.rol === 'Alumno') {
               <span
                 class="inline-flex items-center gap-1.5 py-1 px-3 rounded-full text-xs font-medium bg-[#fae7e7] text-[#e74c3c] dark:bg-red-900/50 dark:text-red-400 shadow-sm">
                 {{usuario.rol}}
