--- a/src/app/features/eleccion/eleccion-config/eleccion-config.component.html
+++ b/src/app/features/eleccion/eleccion-config/eleccion-config.component.html
@@ -17,7 +17,7 @@
         </button>
       </div> -->
       <div class="relative w-full h-48">
-        <img [src]="candidato.imagenes[currentImageIndexes[i]]?.secure_url || 'https://placehold.co/600x400/6b7280/ffffff?text=' + candidato.nombre" alt="Foto de {{ candidato.nombre }}" class="w-full h-48 object-cover carousel-image" [class.opacity-0]="isImageLoading[i]">
+        <img [src]="candidato.imagenes[currentImageIndexes[i]].secure_url || 'https://placehold.co/600x400/6b7280/ffffff?text=' + candidato.nombre" alt="Foto de {{ candidato.nombre }}" class="w-full h-48 object-cover carousel-image" [class.opacity-0]="isImageLoading[i]">
         <div class="absolute inset-0 flex justify-between items-center">
           <button (click)="prevImage(i)" class="p-2 text-white bg-black bg-opacity-25 rounded-full carousel-button cursor-pointer">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
